<resources>
    <string name="app_name">Quiz</string>
    <string name="name_hint">Name</string>
    <string name="email_hint">E-mail</string>
    <string name="password_hint">Password</string>
    <string name="login_button_text">Login</string>
    <string name="sign_up_button_text">Sign Up</string>
    <string name="start_button_text">Start Quiz</string>
    <string name="stat_text_placeholder">Welcome!</string>
    <string name="stat_high_score">Latest Score: %1$s</string>
    <string name="quiz_header_text_placeholder">Question</string>
    <string name="quiz_question_text_placeholder">Question text</string>
    <string name="quiz_next_button_text">Next</string>
    <string name="quiz_back_button_text">Back</string>
    <string name="quiz_finished">Quiz Finished!</string>
    <string name="quiz_finished_info">
        You have %1$d of %2$d correct answers (%3$s)
    </string>
    <string name="back_to_main_screen">Back to Home</string>
</resources>
